# Studyflow

./: README.md  pyproject.toml
src/studyflow/: __init__.py  cli.py  db.py  gamify.py  garden.py  quotes.py  stats.py  timer.py
src/studyflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/studyflow/data/: quotes.json
