[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studyflow"
version = "0.1.0"
description = "A flowtime study timer with gamification"
requires-python = ">=3.11"
dependencies = [
    "rich>=13.7",
    "typer>=0.12",
    "platformdirs>=4.2",
]

[project.scripts]
studyflow = "studyflow.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
studyflow = ["data/*.json"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
